<resources>
    <string name="app_name">CodeChallenge</string>
    <!--  Common  -->
    <string name="ok">OK</string>
    <string name="close">閉じる</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="retry">リトライ</string>
    <string name="next">次へ</string>
    <string name="hash_tag">#</string>
    <string name="complete">完了</string>
    <string name="minute">分</string>

    <!--  BottomNavigationTitle  -->
    <string name="title_home">ホーム</string>
    <string name="title_search">検索</string>
    <string name="title_favorite">お気に入りリスト</string>
    <string name="title_my_page">マイページ</string>
    <string name="title_default_movie_detail">映画詳細</string>

    <!--  error dialog  -->
    <string name="error_dialog_connection_error_title">データを取得できませんでした</string>
    <string name="error_dialog_connection_error_text">しばらく経ってからお試し下さい。</string>
    <string name="error_dialog_default_title">エラー</string>
    <string name="error_dialog_default_text">エラーが発生しました</string>
    <string name="error_dialog_data_not_acquired_text">エラーが発生しました。通信環境の良い場所で再度お試しください。</string>


    <!--  Home  -->
    <string name="title_recommend_movie">本日のオススメ映画はコチラ！</string>

    <!--  映画詳細画面  -->
    <string name="title_add_favorite">お気に入りに\n追加する</string>
    <string name="title_share">シェアする</string>
    <string name="title_subtitle">対応字幕</string>
    <string name="title_genres">ジャンル</string>

    <!--  お気に入り画面  -->
    <string name="title_empty_state">まだお気に入りの映画がありません</string>
    <string name="text_empty_state">気になる映画をお気に入りに入れてみましょう</string>
    <string name="text_empty_button">映画を探しに行く</string>

<!--  検索画面  -->
    <string name="search_box_hint">検索</string>
    <string name="title_search_empty_state">アイテムがありません</string>
    <string name="text_search_empty_state">他のキーワードで気になる映画を検索してみましょう</string>


</resources>