<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="vm"
            type="com.example.akiraito.codechallenge.presentation.detail.MovieDetailViewModel" />

        <variable
            name="buildConfig"
            type="com.example.akiraito.codechallenge.BuildConfig" />

        <variable
            name="likeValue"
            type="Float" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_black">

            <ImageView
                android:id="@+id/image_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{buildConfig.IMAGE_BACE_URL + vm.movieInfo.backdropPath}"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/text_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_m"
                android:text="@{vm.movieInfo.title}"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_n"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_movie_poster"
                tools:text="映画タイトル映画タイトル映画タイトル映画タイトル映画タイトル映画タイトル映画タイトル" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_s"
                android:rating="@{vm.movieInfo.voteAverage}"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@+id/text_popularity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_title"
                tools:rating="2.5" />

            <TextView
                android:id="@+id/text_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_space_s"
                android:text="@{'('+vm.movieInfo.voteCount.toString()+')'}"
                android:textColor="@color/text_link"
                app:layout_constraintStart_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_title"
                tools:text="(12345)" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_s"
                android:text="@{vm.movieInfo.runtime.toString() + @string/minute}"
                android:textColor="@color/text_white"
                app:layout_constraintStart_toEndOf="@+id/text_popularity"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_title" />

            <TextView
                android:id="@+id/text_favorite_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_space_m"
                android:gravity="center"
                android:text="@string/title_add_favorite"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_xxs"
                app:layout_constraintEnd_toStartOf="@+id/text_share_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/like_button"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                app:layout_constraintEnd_toEndOf="@+id/text_favorite_title"
                app:layout_constraintStart_toStartOf="@+id/text_favorite_title"
                app:layout_constraintTop_toBottomOf="@+id/text_favorite_title"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/like" />

            <TextView
                android:id="@+id/text_share_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_space_m"
                android:gravity="center"
                android:text="@string/title_share"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_xxs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_favorite_title"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <ImageView
                android:id="@+id/image_share_button"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:onClick="@{() -> vm.showSnsShare()}"
                android:padding="10dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@+id/like_button"
                app:layout_constraintEnd_toEndOf="@+id/text_share_title"
                app:layout_constraintStart_toStartOf="@+id/text_share_title"
                app:layout_constraintTop_toTopOf="@+id/like_button" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_s"
                android:layout_marginEnd="@dimen/content_space_m"
                android:text="@{vm.movieInfo.overview}"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_m"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/like_button" />

            <TextView
                android:id="@+id/text_subtitles_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_m"
                android:layout_marginEnd="@dimen/content_space_m"
                android:text="@string/title_subtitle"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_n"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description" />

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_s"
                android:layout_marginEnd="@dimen/content_space_m"
                android:text="@{vm.subtitle}"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_m"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_subtitles_title" />

            <TextView
                android:id="@+id/text_genres_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_m"
                android:layout_marginEnd="@dimen/content_space_m"
                android:text="@string/title_genres"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_n"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_subtitle" />

            <TextView
                android:id="@+id/text_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_space_m"
                android:layout_marginTop="@dimen/content_space_s"
                android:layout_marginEnd="@dimen/content_space_m"
                android:layout_marginBottom="@dimen/content_space_n"
                android:text="@{vm.genres}"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_genres_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>